# baboot

./: .env  Cargo.toml  README.md
src/: main.rs
src/commands/: challenge.rs  lyrics.rs  mod.rs  music.rs  ping.rs  pog.rs  tictac.rs
