[package]
name = "baboot"
version = "0.1.2"
authors = ["GabriWar"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-futures = "0.2.5"

[dependencies.genius-rs]
genius-rs = {git = "https://github.com/alt-art/genius-rs"}

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["client","cache", "model", "framework", "collector", "standard_framework", "rustls_backend", "voice"]
version = "0.11.1"

[dependencies.songbird]
version = "0.3.0"
features = ["builtin-queue"]
[dependencies.youtube_dl]
version = "0.7.0"

